--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body></body>
   <script>
     function start() {
-      window.location.href = "./view/customers/customers_list.php";
+      window.location.href = "./view/main";
     }
     start();
   </script>
